syntax = "proto3";

package api_pb;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/api/httpbody.proto";
import "google/protobuf/empty.proto";

message StatisticsResponse {
    uint64 freeRam = 1;
}

service HostMonitorService {
    rpc GetStatistics(google.protobuf.Empty) returns (StatisticsResponse) {
        option (google.api.http) = {
			get: "/statistics"
		};
    }
}